GramBot/codebase/HOC_PROYECTOFINAL/y.output
   0  $accept : list $end

   1  list :
   2       | list '\n'
   3       | list defn ';'
   4       | list asgn '\n'
   5       | list stmt '\n'
   6       | list exp '\n'
   7       | list asigncoord '\n'
   8       | list expcoord '\n'

   9  asgn : VAR '=' exp

  10  stmt : exp
  11       | RETURN exp
  12       | procname begin '(' arglist ')'
  13       | PRINT exp
  14       | asigncoord
  15       | expcoord
  16       | while cond stmt end
  17       | if cond stmt end
  18       | if cond stmt end ELSE stmt end
  19       | for '(' inicio ';' cond ';' inc ')' stmt end
  20       | '{' stmtlist '}'

  21  cond : '(' exp ')'

  22  while : WHILE

  23  if : IF

  24  for : FOR

  25  inicio : exp

  26  inc : exp

  27  end :

  28  stmtlist :
  29           | stmtlist '\n'
  30           | stmtlist stmt

  31  defn : PROC procname '(' ')' stmt
  32       | FUNC procname '(' ')' stmt

  33  procname : VAR
  34           | FUNCTION
  35           | PROCEDURE

  36  arglist :
  37          | exp
  38          | arglist ',' exp

  39  begin :

  40  exp : NUMBER
  41      | VAR
  42      | ARG
  43      | procname begin '(' arglist ')'
  44      | asgn
  45      | BLTIN '(' exp ')'
  46      | exp '+' exp
  47      | exp '-' exp
  48      | exp '*' exp
  49      | exp '/' exp
  50      | exp '^' exp
  51      | '(' exp ')'
  52      | exp EQ exp
  53      | exp NEQ exp
  54      | exp GT exp
  55      | exp GE exp
  56      | exp LT exp
  57      | exp LE exp

  58  asigncoord : VARCRD '=' binstr

  59  binstr : binstr instr
  60         | 'c'
  61         | expcoord

  62  expcoord : expcoord '+' expcoord
  63           | expcoord '-' expcoord
  64           | sec

  65  sec : 'c'
  66      | sec instr
  67      | VARCRD

  68  instr : 'e'
  69        | 'n'
  70        | 'o'
  71        | 's'
  72        | 'u'
  73        | 'd'
  74        | '&'
  75        | '%'
  76        | '#'
  77        | '"'

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . '\n'  (2)
	list : list . defn ';'  (3)
	list : list . asgn '\n'  (4)
	list : list . stmt '\n'  (5)
	list : list . exp '\n'  (6)
	list : list . asigncoord '\n'  (7)
	list : list . expcoord '\n'  (8)

	$end  accept
	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	FUNC  shift 7
	PROC  shift 8
	RETURN  shift 9
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	VARCRD  shift 15
	'\n'  shift 16
	'('  shift 17
	'{'  shift 18
	'c'  shift 19
	.  error

	defn  goto 20
	asgn  goto 21
	stmt  goto 22
	exp  goto 23
	asigncoord  goto 24
	expcoord  goto 25
	procname  goto 26
	while  goto 27
	if  goto 28
	for  goto 29
	sec  goto 30


state 2
	exp : BLTIN . '(' exp ')'  (45)

	'('  shift 31
	.  error


state 3
	if : IF .  (23)

	.  reduce 23


state 4
	while : WHILE .  (22)

	.  reduce 22


state 5
	for : FOR .  (24)

	.  reduce 24


state 6
	stmt : PRINT . exp  (13)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 33
	procname  goto 34


state 7
	defn : FUNC . procname '(' ')' stmt  (32)

	FUNCTION  shift 10
	PROCEDURE  shift 11
	VAR  shift 35
	.  error

	procname  goto 36


state 8
	defn : PROC . procname '(' ')' stmt  (31)

	FUNCTION  shift 10
	PROCEDURE  shift 11
	VAR  shift 35
	.  error

	procname  goto 37


state 9
	stmt : RETURN . exp  (11)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 38
	procname  goto 34


state 10
	procname : FUNCTION .  (34)

	.  reduce 34


state 11
	procname : PROCEDURE .  (35)

	.  reduce 35


state 12
	exp : ARG .  (42)

	.  reduce 42


state 13
	exp : NUMBER .  (40)

	.  reduce 40


14: reduce/reduce conflict (reduce 33, reduce 41) on '('
state 14
	asgn : VAR . '=' exp  (9)
	procname : VAR .  (33)
	exp : VAR .  (41)

	'='  shift 39
	BLTIN  reduce 41
	IF  reduce 41
	ELSE  reduce 41
	WHILE  reduce 41
	FOR  reduce 41
	PRINT  reduce 41
	RETURN  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	GT  reduce 41
	GE  reduce 41
	LT  reduce 41
	LE  reduce 41
	FUNCTION  reduce 41
	PROCEDURE  reduce 41
	ARG  reduce 41
	NUMBER  reduce 41
	VAR  reduce 41
	VARCRD  reduce 41
	'-'  reduce 41
	'+'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'\n'  reduce 41
	';'  reduce 41
	'('  reduce 33
	')'  reduce 41
	'{'  reduce 41
	'}'  reduce 41
	','  reduce 41
	'^'  reduce 41
	'c'  reduce 41


state 15
	asigncoord : VARCRD . '=' binstr  (58)
	sec : VARCRD .  (67)

	'='  shift 40
	BLTIN  reduce 67
	IF  reduce 67
	ELSE  reduce 67
	WHILE  reduce 67
	FOR  reduce 67
	PRINT  reduce 67
	RETURN  reduce 67
	FUNCTION  reduce 67
	PROCEDURE  reduce 67
	ARG  reduce 67
	NUMBER  reduce 67
	VAR  reduce 67
	VARCRD  reduce 67
	'-'  reduce 67
	'+'  reduce 67
	'\n'  reduce 67
	';'  reduce 67
	'('  reduce 67
	'{'  reduce 67
	'}'  reduce 67
	'c'  reduce 67
	'e'  reduce 67
	'n'  reduce 67
	'o'  reduce 67
	's'  reduce 67
	'u'  reduce 67
	'd'  reduce 67
	'&'  reduce 67
	'%'  reduce 67
	'#'  reduce 67
	'"'  reduce 67


state 16
	list : list '\n' .  (2)

	.  reduce 2


state 17
	exp : '(' . exp ')'  (51)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 41
	procname  goto 34


state 18
	stmt : '{' . stmtlist '}'  (20)
	stmtlist : .  (28)

	.  reduce 28

	stmtlist  goto 42


state 19
	sec : 'c' .  (65)

	.  reduce 65


state 20
	list : list defn . ';'  (3)

	';'  shift 43
	.  error


21: shift/reduce conflict (shift 44, reduce 44) on '\n'
state 21
	list : list asgn . '\n'  (4)
	exp : asgn .  (44)

	'\n'  shift 44
	EQ  reduce 44
	NEQ  reduce 44
	GT  reduce 44
	GE  reduce 44
	LT  reduce 44
	LE  reduce 44
	'-'  reduce 44
	'+'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'^'  reduce 44


state 22
	list : list stmt . '\n'  (5)

	'\n'  shift 45
	.  error


23: shift/reduce conflict (shift 56, reduce 10) on '\n'
state 23
	list : list exp . '\n'  (6)
	stmt : exp .  (10)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '^' exp  (50)
	exp : exp . EQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . GT exp  (54)
	exp : exp . GE exp  (55)
	exp : exp . LT exp  (56)
	exp : exp . LE exp  (57)

	EQ  shift 46
	NEQ  shift 47
	GT  shift 48
	GE  shift 49
	LT  shift 50
	LE  shift 51
	'-'  shift 52
	'+'  shift 53
	'*'  shift 54
	'/'  shift 55
	'\n'  shift 56
	'^'  shift 57


24: shift/reduce conflict (shift 58, reduce 14) on '\n'
state 24
	list : list asigncoord . '\n'  (7)
	stmt : asigncoord .  (14)

	'\n'  shift 58


25: shift/reduce conflict (shift 61, reduce 15) on '\n'
state 25
	list : list expcoord . '\n'  (8)
	stmt : expcoord .  (15)
	expcoord : expcoord . '+' expcoord  (62)
	expcoord : expcoord . '-' expcoord  (63)

	'-'  shift 59
	'+'  shift 60
	'\n'  shift 61


state 26
	stmt : procname . begin '(' arglist ')'  (12)
	exp : procname . begin '(' arglist ')'  (43)
	begin : .  (39)

	.  reduce 39

	begin  goto 62


state 27
	stmt : while . cond stmt end  (16)

	'('  shift 63
	.  error

	cond  goto 64


state 28
	stmt : if . cond stmt end  (17)
	stmt : if . cond stmt end ELSE stmt end  (18)

	'('  shift 63
	.  error

	cond  goto 65


state 29
	stmt : for . '(' inicio ';' cond ';' inc ')' stmt end  (19)

	'('  shift 66
	.  error


30: shift/reduce conflict (shift 67, reduce 64) on 'e'
30: shift/reduce conflict (shift 68, reduce 64) on 'n'
30: shift/reduce conflict (shift 69, reduce 64) on 'o'
30: shift/reduce conflict (shift 70, reduce 64) on 's'
30: shift/reduce conflict (shift 71, reduce 64) on 'u'
30: shift/reduce conflict (shift 72, reduce 64) on 'd'
30: shift/reduce conflict (shift 73, reduce 64) on '&'
30: shift/reduce conflict (shift 74, reduce 64) on '%'
30: shift/reduce conflict (shift 75, reduce 64) on '#'
30: shift/reduce conflict (shift 76, reduce 64) on '"'
state 30
	expcoord : sec .  (64)
	sec : sec . instr  (66)

	'e'  shift 67
	'n'  shift 68
	'o'  shift 69
	's'  shift 70
	'u'  shift 71
	'd'  shift 72
	'&'  shift 73
	'%'  shift 74
	'#'  shift 75
	'"'  shift 76
	BLTIN  reduce 64
	IF  reduce 64
	ELSE  reduce 64
	WHILE  reduce 64
	FOR  reduce 64
	PRINT  reduce 64
	RETURN  reduce 64
	FUNCTION  reduce 64
	PROCEDURE  reduce 64
	ARG  reduce 64
	NUMBER  reduce 64
	VAR  reduce 64
	VARCRD  reduce 64
	'-'  reduce 64
	'+'  reduce 64
	'\n'  reduce 64
	';'  reduce 64
	'('  reduce 64
	'{'  reduce 64
	'}'  reduce 64
	'c'  reduce 64

	instr  goto 77


state 31
	exp : BLTIN '(' . exp ')'  (45)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 78
	procname  goto 34


state 32
	exp : asgn .  (44)

	.  reduce 44


state 33
	stmt : PRINT exp .  (13)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '^' exp  (50)
	exp : exp . EQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . GT exp  (54)
	exp : exp . GE exp  (55)
	exp : exp . LT exp  (56)
	exp : exp . LE exp  (57)

	EQ  shift 46
	NEQ  shift 47
	GT  shift 48
	GE  shift 49
	LT  shift 50
	LE  shift 51
	'-'  shift 52
	'+'  shift 53
	'*'  shift 54
	'/'  shift 55
	'^'  shift 57
	BLTIN  reduce 13
	IF  reduce 13
	ELSE  reduce 13
	WHILE  reduce 13
	FOR  reduce 13
	PRINT  reduce 13
	RETURN  reduce 13
	FUNCTION  reduce 13
	PROCEDURE  reduce 13
	ARG  reduce 13
	NUMBER  reduce 13
	VAR  reduce 13
	VARCRD  reduce 13
	'\n'  reduce 13
	';'  reduce 13
	'('  reduce 13
	'{'  reduce 13
	'}'  reduce 13
	'c'  reduce 13


state 34
	exp : procname . begin '(' arglist ')'  (43)
	begin : .  (39)

	.  reduce 39

	begin  goto 79


state 35
	procname : VAR .  (33)

	.  reduce 33


state 36
	defn : FUNC procname . '(' ')' stmt  (32)

	'('  shift 80
	.  error


state 37
	defn : PROC procname . '(' ')' stmt  (31)

	'('  shift 81
	.  error


state 38
	stmt : RETURN exp .  (11)
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '^' exp  (50)
	exp : exp . EQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . GT exp  (54)
	exp : exp . GE exp  (55)
	exp : exp . LT exp  (56)
	exp : exp . LE exp  (57)

	EQ  shift 46
	NEQ  shift 47
	GT  shift 48
	GE  shift 49
	LT  shift 50
	LE  shift 51
	'-'  shift 52
	'+'  shift 53
	'*'  shift 54
	'/'  shift 55
	'^'  shift 57
	BLTIN  reduce 11
	IF  reduce 11
	ELSE  reduce 11
	WHILE  reduce 11
	FOR  reduce 11
	PRINT  reduce 11
	RETURN  reduce 11
	FUNCTION  reduce 11
	PROCEDURE  reduce 11
	ARG  reduce 11
	NUMBER  reduce 11
	VAR  reduce 11
	VARCRD  reduce 11
	'\n'  reduce 11
	';'  reduce 11
	'('  reduce 11
	'{'  reduce 11
	'}'  reduce 11
	'c'  reduce 11


state 39
	asgn : VAR '=' . exp  (9)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 82
	procname  goto 34


state 40
	asigncoord : VARCRD '=' . binstr  (58)

	VARCRD  shift 83
	'c'  shift 84
	.  error

	expcoord  goto 85
	binstr  goto 86
	sec  goto 30


state 41
	exp : exp . '+' exp  (46)
	exp : exp . '-' exp  (47)
	exp : exp . '*' exp  (48)
	exp : exp . '/' exp  (49)
	exp : exp . '^' exp  (50)
	exp : '(' exp . ')'  (51)
	exp : exp . EQ exp  (52)
	exp : exp . NEQ exp  (53)
	exp : exp . GT exp  (54)
	exp : exp . GE exp  (55)
	exp : exp . LT exp  (56)
	exp : exp . LE exp  (57)

	EQ  shift 46
	NEQ  shift 47
	GT  shift 48
	GE  shift 49
	LT  shift 50
	LE  shift 51
	'-'  shift 52
	'+'  shift 53
	'*'  shift 54
	'/'  shift 55
	')'  shift 87
	'^'  shift 57
	.  error


state 42
	stmt : '{' stmtlist . '}'  (20)
	stmtlist : stmtlist . '\n'  (29)
	stmtlist : stmtlist . stmt  (30)

	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	RETURN  shift 9
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	VARCRD  shift 15
	'\n'  shift 88
	'('  shift 17
	'{'  shift 18
	'}'  shift 89
	'c'  shift 19
	.  error

	asgn  goto 32
	stmt  goto 90
	exp  goto 91
	asigncoord  goto 92
	expcoord  goto 93
	procname  goto 26
	while  goto 27
	if  goto 28
	for  goto 29
	sec  goto 30


state 43
	list : list defn ';' .  (3)

	.  reduce 3


state 44
	list : list asgn '\n' .  (4)

	.  reduce 4


state 45
	list : list stmt '\n' .  (5)

	.  reduce 5


state 46
	exp : exp EQ . exp  (52)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 94
	procname  goto 34


state 47
	exp : exp NEQ . exp  (53)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 95
	procname  goto 34


state 48
	exp : exp GT . exp  (54)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 96
	procname  goto 34


state 49
	exp : exp GE . exp  (55)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 97
	procname  goto 34


state 50
	exp : exp LT . exp  (56)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 98
	procname  goto 34


state 51
	exp : exp LE . exp  (57)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 99
	procname  goto 34


state 52
	exp : exp '-' . exp  (47)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 100
	procname  goto 34


state 53
	exp : exp '+' . exp  (46)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 101
	procname  goto 34


state 54
	exp : exp '*' . exp  (48)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 102
	procname  goto 34


state 55
	exp : exp '/' . exp  (49)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 103
	procname  goto 34


state 56
	list : list exp '\n' .  (6)

	.  reduce 6


state 57
	exp : exp '^' . exp  (50)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 104
	procname  goto 34


state 58
	list : list asigncoord '\n' .  (7)

	.  reduce 7


state 59
	expcoord : expcoord '-' . expcoord  (63)

	VARCRD  shift 83
	'c'  shift 19
	.  error

	expcoord  goto 105
	sec  goto 30


state 60
	expcoord : expcoord '+' . expcoord  (62)

	VARCRD  shift 83
	'c'  shift 19
	.  error

	expcoord  goto 106
	sec  goto 30


state 61
	list : list expcoord '\n' .  (8)

	.  reduce 8


state 62
	stmt : procname begin . '(' arglist ')'  (12)
	exp : procname begin . '(' arglist ')'  (43)

	'('  shift 107
	.  error


state 63
	cond : '(' . exp ')'  (21)

	BLTIN  shift 2
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	'('  shift 17
	.  error

	asgn  goto 32
	exp  goto 108
	procname  goto 34


state 64
	stmt : while cond . stmt end  (16)

	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	RETURN  shift 9
	FUNCTION  shift 10
	PROCEDURE  shift 11
	ARG  shift 12
	NUMBER  shift 13
	VAR  shift 14
	VARCRD  shift 15
	'('  shift 17
	'{'  shift 18
	'c'  shift 19
	.  error

	asgn  goto 32
	stmt  goto 109
	exp  goto 91
	asigncoord  goto 92
	expcoord  goto 93
	procname  goto 26
	while  goto 27
	if  goto 28
	for  goto 29
	sec  goto 30

